# medium_newsletter

./: README.md  main.py  pyproject.toml
.github/workflows/: main.yml
config/: .env.sample  settings.py
modules/: post_processor.py  processor.py
modules/clients/: http.py
modules/feeds/: __init__.py  data_loader.py  parser.py  seeds.py
modules/llm/: llm.py  technews_generator.py
modules/llm/helper/: helper.py  langfuse_callback.py
modules/medium/: __init__.py  poster.py
modules/utils/: logger.py
sbin/: common.sh  run.sh
